--- a/.github/workflows/scheduled_build.yml
+++ b/.github/workflows/scheduled_build.yml
@@ -12,7 +12,7 @@ jobs:
         uses: lwojcik/github-action-deploy-static-site@v1
         with:
           platform: netlify
-          netlify_deploy_hook_url: ${{ secrets.NETLIFY_BUILD_HOOK_URL }}
+          netlify_deploy_hook_url: ${{ secrets.NETLIFY_DEPLOY_HOOK_URL }}
           always_deploy: true
           # Using Netlify? Configure this action as follows:
           # platform: netlify
